--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "alpinejs": "^3.7.1"
     }
 }
